--- a/signup/signup.html
+++ b/signup/signup.html
@@ -1,59 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forms</title>
-    <link rel="stylesheet" href="signup.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Forms</title>
+   <link rel="stylesheet" href="signup.css">
 </head>
+
 <body>
-    <div class="container">
-
-        <div id="box1">
-            <h3>Come  join me!</h3>
-            <p id="here">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae architecto corrupti sed repudiandae perspiciatis natus? Accusamus dignissimos a mollitia perspiciatis ut minima reiciendis praesentium? Magnam placeat quidem tempora</p>
-            <button id="myButton">Already have an account? Signin.</button>
-        </div>
-
-        <div id="box2">
-
-            <h2>Signup</h2>
+   <div class="container">
+      <div id="box-1">
+         <h3>Come join me!</h3>
+         <p id="here">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae architecto corrupti sed
+            repudiandae perspiciatis natus? Accusamus dignissimos a mollitia perspiciatis ut minima reiciendis
+            praesentium? Magnam placeat quidem tempora</p>
+         <button id="myButton">Already have an account? Signin.</button>
+      </div>
+      <div id="box2">
+         <h2>Signup</h2>
+         <form class="myForm">
             <div>
-                <form class="myForm">
-                    <div>
-                        <label></label>
-                        <input type="text" name="Name" placeholder="Enter your name" class="myStyle">
-                    </div>
-
-                    <div>
-                    <label></label>
-                    <input type="email" name="Email" placeholder="Enter your email address"  class="myStyle">
-                </div>
-
-                <div>
-                    <label></label>
-                    <input type="password" name="Password" placeholder="Enter your password"  class="myStyle">
-                </div>
-
-                <div>
-                    <label></label>
-                    <input type="number" name="Age" placeholder="Your Age"  class="myStyle">
-
-                    </div>
-
-                    <button type="submit">Signup</button>
-
-                    <p class="aParagraph">or signup with</p>
-                    <div class="logoContainer">
-                         <p class="myLogo"><img src="logos/fb.png">  </p>
-                            <p class="myLogo"><img src="logos/google.png">  </p>
-                            <p class="myLogo"><img src="logos/linkedin.png">  </p>
-                    </div>
-               
-                </form>
+               <input type="text" name="Name" placeholder="Enter your name" class="myStyle">
             </div>
-
-        </div>
-    </div>
+            <div>
+               <input type="email" name="Email" placeholder="Enter your email address" class="myStyle">
+            </div>
+            <div>
+               <input type="password" name="Password" placeholder="Enter your password" class="myStyle">
+            </div>
+            <div>
+               <input type="number" name="Age" placeholder="Your Age" class="myStyle">
+            </div>
+            <button type="submit">Signup</button>
+            <p class="aParagraph">or signup with</p>
+            <div class="logoContainer">
+               <p class="myLogo"><img src="logos/fb.png"> </p>
+               <p class="myLogo"><img src="logos/google.png"> </p>
+               <p class="myLogo"><img src="logos/linkedin.png"> </p>
+            </div>
+         </form>
+      </div>
+   </div>
 </body>
+
 </html>
